tentativa sem sucesso da tarefa 1

--- a/sistemas-lineares.ipynb
+++ b/sistemas-lineares.ipynb
@@ -30,13 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -74,12 +75,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-5503d73e5b6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m             \u001b[0melemento\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melemento\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0msoma\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m             \u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msoma\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msoma\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msoma\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "for K in range(N-1):\n",
+    "    for T in range(N-2):\n",
+    "        T = K+1\n",
+    "        X = []\n",
+    "        for fator in range(T):\n",
+    "            elemento = -(sistema[T][K]/sistema[K][K])*K\n",
+    "            X.append(elemento)\n",
+    "        for soma in range(sistema[T]):\n",
+    "            sistema[T][soma] = sistema[T][soma]+sistema[X][soma]\n",
+    "\n",
+    "print(sistema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for K in range(N-1):\n",
+    "    T = K+1\n",
+    "    X = []\n",
+    "    for fator in range(T):\n",
+    "        elemento = -(sistema[T][K]/sistema[K][K])*K\n",
+    "        X.append(elemento)\n",
+    "\n",
+    "print(X)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,11 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               A                                                   |    b \n",
+      "  25.000  108.000   58.000  102.000   61.000   24.000   39.000   40.000   67.000   11.000    5.000 | 3323.000\n",
+      "  51.000   28.000   17.000   98.000  105.000   43.000   86.000    2.000   71.000   20.000   95.000 | 2869.000\n",
+      "  56.000   70.000  109.000   45.000  117.000   52.000   97.000   92.000    1.000   42.000   78.000 | 4085.000\n",
+      "  59.000    6.000   50.000   37.000  120.000  118.000  104.000   64.000   53.000  100.000   66.000 | 3211.000\n",
+      "  82.000   74.000   68.000   80.000   16.000  115.000   63.000  103.000   60.000   30.000   93.000 | 4181.000\n",
+      "  79.000  113.000   65.000   72.000   22.000   35.000  101.000   10.000   83.000   89.000   85.000 | 3831.000\n",
+      "  34.000   57.000   90.000    9.000   14.000   47.000   76.000   44.000   26.000   48.000  114.000 | 2699.000\n",
+      "  41.000    7.000   21.000   75.000   33.000   49.000   32.000  119.000   46.000    0.000   87.000 | 2891.000\n",
+      "  91.000   77.000   55.000   18.000  106.000   54.000  116.000   12.000   13.000   31.000   38.000 | 3188.000\n",
+      "  27.000   81.000   29.000  107.000   84.000   15.000    3.000  112.000   88.000   69.000   19.000 | 3586.000\n",
+      " 110.000   96.000   23.000   73.000   36.000    8.000   99.000    4.000   94.000  111.000   62.000 | 3598.000\n"
+     ]
+    }
+   ],
    "source": [
     "print('                                               A                                                   |    b ')\n",
     "for i in range(N):\n",
