Fiz a tarefa 1, apos muito suor e lagrimas

--- a/sistemas-lineares.ipynb
+++ b/sistemas-lineares.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -75,61 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-5503d73e5b6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m             \u001b[0melemento\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mK\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melemento\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0msoma\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m             \u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msoma\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msoma\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msistema\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msoma\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for K in range(N-1):\n",
-    "    for T in range(N-2):\n",
-    "        T = K+1\n",
-    "        X = []\n",
-    "        for fator in range(T):\n",
-    "            elemento = -(sistema[T][K]/sistema[K][K])*K\n",
-    "            X.append(elemento)\n",
-    "        for soma in range(sistema[T]):\n",
-    "            sistema[T][soma] = sistema[T][soma]+sistema[X][soma]\n",
-    "\n",
-    "print(sistema)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219, -14.478260869565219]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for K in range(N-1):\n",
-    "    T = K+1\n",
-    "    X = []\n",
-    "    for fator in range(T):\n",
-    "        elemento = -(sistema[T][K]/sistema[K][K])*K\n",
-    "        X.append(elemento)\n",
-    "\n",
-    "print(X)"
+    "for K in range(N-1): #faremos um for para trabalhar em todas as linhas da matriz\n",
+    "    for i in range(K+1, N): #faremos outro for para trabalhar com todas as linhas apos cada linha da matriz\n",
+    "        fator = sistema[i][K]/sistema[K][K] #esta e uma parte da equacao que tem de ser feita a parte, elemento por elemento.\n",
+    "        for j in range(K, N): #para cada elemento de cada linha, executaremos a conta a seguir.\n",
+    "            #esta conta esta escalonando a equacao, ativamente somando cada linha multiplicada pelo negativo do primeiro elemento\n",
+    "            #da proxima linha e dividida pelo primeiro elemento dela propria, efetivamente zerando o primeiro elemento da linha\n",
+    "            #resultante.\n",
+    "            sistema[i][j] = sistema[i][j] + (-sistema[K][j]*fator)\n",
+    "        lado_direito[i] = lado_direito[i] - (lado_direito[K]*fator)"
    ]
   },
   {
@@ -156,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -167,16 +127,16 @@
      "text": [
       "                                               A                                                   |    b \n",
       "  25.000  108.000   58.000  102.000   61.000   24.000   39.000   40.000   67.000   11.000    5.000 | 3323.000\n",
-      "  51.000   28.000   17.000   98.000  105.000   43.000   86.000    2.000   71.000   20.000   95.000 | 2869.000\n",
-      "  56.000   70.000  109.000   45.000  117.000   52.000   97.000   92.000    1.000   42.000   78.000 | 4085.000\n",
-      "  59.000    6.000   50.000   37.000  120.000  118.000  104.000   64.000   53.000  100.000   66.000 | 3211.000\n",
-      "  82.000   74.000   68.000   80.000   16.000  115.000   63.000  103.000   60.000   30.000   93.000 | 4181.000\n",
-      "  79.000  113.000   65.000   72.000   22.000   35.000  101.000   10.000   83.000   89.000   85.000 | 3831.000\n",
-      "  34.000   57.000   90.000    9.000   14.000   47.000   76.000   44.000   26.000   48.000  114.000 | 2699.000\n",
-      "  41.000    7.000   21.000   75.000   33.000   49.000   32.000  119.000   46.000    0.000   87.000 | 2891.000\n",
-      "  91.000   77.000   55.000   18.000  106.000   54.000  116.000   12.000   13.000   31.000   38.000 | 3188.000\n",
-      "  27.000   81.000   29.000  107.000   84.000   15.000    3.000  112.000   88.000   69.000   19.000 | 3586.000\n",
-      " 110.000   96.000   23.000   73.000   36.000    8.000   99.000    4.000   94.000  111.000   62.000 | 3598.000\n"
+      "   0.000 -192.320 -101.320 -110.080  -19.440   -5.960    6.440  -79.600  -65.680   -2.440   84.800 | -3909.920\n",
+      "   0.000    0.000   69.653  -85.077   -2.262    3.568    3.883   73.557  -90.367   19.541   -9.005 |  136.662\n",
+      "   0.000    0.000    0.000   -7.233    2.634   66.807    1.160   25.893   37.269   64.787  -49.820 |  341.724\n",
+      "   0.000    0.000    0.000    0.000 -177.918 -539.479  -85.844 -165.046 -356.419 -575.159  391.184 | -4053.756\n",
+      "   0.000    0.000    0.000    0.000    0.000 -539.656   43.030 -267.157 -271.025 -378.300  357.879 | -3235.329\n",
+      "   0.000    0.000    0.000    0.000    0.000    0.000   55.468  -69.824   59.860   57.791   78.381 |  141.706\n",
+      "   0.000    0.000    0.000    0.000    0.000    0.000    0.000   70.381   24.471   60.345  -29.950 |  741.794\n",
+      "   0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000  -16.843 -126.224   62.584 |   57.797\n",
+      "   0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000 -291.983  268.919 |  537.838\n",
+      "   0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000  -71.547 | -143.094\n"
      ]
     }
    ],
@@ -223,11 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.000000 9.000000 5.000000 7.000000 3.000000 1.000000 8.000000 10.000000 4.000000 0.000000 2.000000 "
+     ]
+    }
+   ],
    "source": [
     "for i in range(N):\n",
     "    print('{:8.6f} '.format(solucao[i]), end='')"
