--- a/sistemas-lineares.ipynb
+++ b/sistemas-lineares.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -128,15 +128,15 @@
       "                                               A                                                   |    b \n",
       "  25.000  108.000   58.000  102.000   61.000   24.000   39.000   40.000   67.000   11.000    5.000 | 3323.000\n",
       "   0.000 -192.320 -101.320 -110.080  -19.440   -5.960    6.440  -79.600  -65.680   -2.440   84.800 | -3909.920\n",
-      "   0.000    0.000   69.653  -85.077   -2.262    3.568    3.883   73.557  -90.367   19.541   -9.005 |  136.662\n",
+      "  -0.000    0.000   69.653  -85.077   -2.262    3.568    3.883   73.557  -90.367   19.541   -9.005 |  136.662\n",
       "   0.000    0.000    0.000   -7.233    2.634   66.807    1.160   25.893   37.269   64.787  -49.820 |  341.724\n",
       "   0.000    0.000    0.000    0.000 -177.918 -539.479  -85.844 -165.046 -356.419 -575.159  391.184 | -4053.756\n",
-      "   0.000    0.000    0.000    0.000    0.000 -539.656   43.030 -267.157 -271.025 -378.300  357.879 | -3235.329\n",
+      "   0.000    0.000    0.000    0.000   -0.000 -539.656   43.030 -267.157 -271.025 -378.300  357.879 | -3235.329\n",
       "   0.000    0.000    0.000    0.000    0.000    0.000   55.468  -69.824   59.860   57.791   78.381 |  141.706\n",
       "   0.000    0.000    0.000    0.000    0.000    0.000    0.000   70.381   24.471   60.345  -29.950 |  741.794\n",
       "   0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000  -16.843 -126.224   62.584 |   57.797\n",
       "   0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000 -291.983  268.919 |  537.838\n",
-      "   0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000  -71.547 | -143.094\n"
+      "  -0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000    0.000  -71.547 | -143.094\n"
      ]
     }
    ],
@@ -163,12 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "solucao = [0]*M #criamos a lista solucao, que sera preenchida em breve.\n",
+    "\n",
+    "for K in range (N-1, -1, -1): #criamos um for que andara de tras pra frente, perceba.\n",
+    "    soma = 0 #criamos a variavel soma, que sera zerada a cada loop.\n",
+    "    for i in range (K+1, N): #um novo for dentro do anterior tratara de cada elemento de cada linha.\n",
+    "        soma = soma + (sistema[K][i]*solucao[i]) #preenchemos a variavel soma, que utilizaremos na expressao seguinte\n",
+    "    banana = (lado_direito[K] - soma)/sistema[K][K] #cada vez que a soma completa com todos os elementos, esta expressao e executada e guardada na variavel banana\n",
+    "    solucao[K] = banana #ao fim do loop, cada banana e armazenada em seu devido lugar na lista solucao."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
